syntax = "proto3";

message UnexpectedError {
    string description = 1;
}

message FromServer {
    oneof inner {
        bytes output = 1;
        UnexpectedError unexpected_error = 2;
    }
}

message Initialize {
    string row_index_filters = 1;
    string row_regex_filter = 2;
    repeated string row_separators = 3;
    string column_index_filters = 4;
    string column_regex_filter = 5;
    repeated string column_separators = 6;
}

message SetRowIndexFilters {
    string filters = 1;
}

message SetRowRegexFilter {
    string filter = 1;
}

message SetRowSeparators {
    repeated string separators = 1;
}

message SetColumnIndexFilters {
    string filters = 1;
}

message SetColumnRegexFilter {
    string filter = 1;
}

message SetColumnSeparators {
    repeated string separators = 1;
}

message FromClient {
    oneof inner {
        Initialize initialize = 1;
        SetRowIndexFilters set_row_index_filters = 2;
        SetRowRegexFilter set_row_regex_filter = 3;
        SetRowSeparators set_row_separators = 4;
        SetColumnIndexFilters set_column_index_filters = 5;
        SetColumnRegexFilter set_column_regex_filter = 6;
        SetColumnSeparators set_column_separators = 7;
    }
}
